--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 <base href="https://neocharmy.github.io/shadow/shadow">
 <div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
-        <embed height="400" pluginspage=" http://www.macromedia.com/go/getflashplayer"  src="Loader.swf" type="application/x-shockwave-flash" width="485" bgcolor = "#333333"></embed>
+        <embed height="400" pluginspage=" http://www.macromedia.com/go/getflashplayer"  src="Loader.swf" type="application/x-shockwave-flash" width="485" ></embed>
 </div>
+<body bgcolor = "#333333"> </body>
